client/app/modal.scss
.flyout                           { background: $white; height: 100%; overflow: auto; position: fixed; top: 0; left: 0; width: 100%; z-index: 100;
  .close                          { clear: both; color: $darkgray; font-size: 18px; opacity: 1; padding: 10px; }
  h1                              { font: 300 36px $serif-font; margin: 40px 0 30px; position: relative;
    &.channel-heading             { font-size: 2.3rem; text-align: center; }
    button.btn                    { background: none; bottom: 10px; color: $blue; font-size: 2rem; line-height: 3rem; padding: 0; position: absolute; right: 0; }
  }
  h3                              { }
  h4                              { font: medium 16px $sans-font;
    &.table-title                 { border-bottom: 2px solid $black; font: 500 16px $sans-font; margin: 20px 0 0; }
  }
  .icon-close                     { color: $gray; font-size: 14px; opacity: 1; transition: 500ms ease all;
    &:hover                       { color: $red; }
  }
  .row-info                       { margin-bottom: 30px; line-height: 24px;
    strong                        { font-weight: 500; }
  }
  .image                          { max-height: 170px; display: block; }
  .status                         {
    &.cancelled                   { color: $red; }
    &.expired,
    &.fulfilled                   { color: $lightgray; }
    &.expiring,
    &.inprogress                  { color: $orange; }
    &.current,
    &.new                         { color: $green1; }
  }
  .resetsave                      { margin: 30px 0;
    .btn                          { margin: 0 5px; }
  }
  .dragable                       { list-style: none; margin: 0; padding: 0;
    li                            { background: $white; border: 1px solid $lightgray; font-size: 14px; height: 50px; line-height: 50px; margin-bottom: 20px; padding: 0 20px; position: relative;
      .handle                     { color: $reservation-gray; cursor: grab; display: block; font-size: 28px; height: 100%; line-height: 50px; position: absolute; right: 0; text-align: center; top: 0; width: 40px; }
      &:last-child                { margin-bottom: 0; }
    }
  }
  form.custom-form                {
    .bottom-text                  { padding-top: 30px;
      small                       { color: $lightgray; }
    }
  }
  .top-instructions               { border-bottom: 1px solid $lightgray; font-size: 18px; margin-bottom: 30px; text-align: center; }
  .shadowed-container             {
    &:last-child                  { margin-bottom: 0; }
  }


  // ORDERS
  .table                          {
    &.food-item-table             { table-layout: auto; margin: 0;
      .tbody                      { margin-top: 10px; }
      .td                         { border: none; height: 30px; padding: 0; }
    }
  }


  // FOOD MENUS
  .option-line                    { margin-bottom: 10px;
    > div                         {
      &:nth-child(1)              { padding-right: 10px; }
      &:nth-child(2)              { padding: 0 0 0 10px; }
      &:nth-child(3)              { text-align: center; }
    }
  }
  .extra-margin                   { margin-bottom: 30px; }
  form.food-item                  {
    textarea                      { height: 170px; }
    .price-type                   {
      .price-radio                { height: 48px; padding: 10px 0; }
      .form-group                 { margin: 0; }
    }
    .add-something                { font-size: 14px; padding: 0; }
  }
  .table-view-order               { table-layout: auto;
    .th                           {
      &:nth-child(1)              { width: 45%; }
      &:nth-child(2)              { width: 25%; }
      &:nth-child(3)              { width: 15%; }
      &:nth-child(4)              { width: 15%; }
    }
  }
  .table-edit-order               { table-layout: auto; margin-top: 30px;
    .td, .th                      { padding: 0 15px;
      &:nth-child(1)              { padding-left: 0; width: 40%; }
      &:nth-child(2)              { width: 25%; }
      &:nth-child(3)              { width: 10%; }
      &:nth-child(4)              { text-align: right; width: 20%; }
      &:nth-child(5)              { padding-right: 0; text-align: right; width: 5%; }
    }
    .tbody                        {
      .td                         {
        .form-group               { margin: 0; }
        fieldset:before           { top: 15px; }
        input,
        select                    { height: 40px; }
      }
    }
  }


  // MARKETING
  .channel-nav                    { border-bottom: 1px solid $blue; margin-bottom: 20px; }
  .nav-tabs                       { border-bottom: none;
    li                            { text-align: center; width: 20%;
      &.active                    {
        a                         { background: $white; border: 1px solid $blue; }
      }
      a                           { background: $headerbg; border: 1px solid $lightgray; border-bottom: 1px solid $blue; border-radius: 0; font-size: 3rem; margin: 0; }
    }
  }
  .wider-row                      { margin-left: -45px; margin-right: -45px; }
  .googlemap                      { margin-bottom: 10px; position: relative;
    iframe                        { border: none; height: 350px; width: 100%; }
    .reach                        { right: -220px; position: absolute; top: 0; width: 200px;
      h4                          { color: $lightgray; font-size: 16px; font-weight: bold; margin: 0}
      strong                      { color: $lightgray2; display: block; font-size: 16px; margin: 10px 0; }
      p                           { color: $black; font-size: 13px; }
    }
  }
  .age-range                      { vertical-align: middle;
    select                        { display: inline-block; width: 100px; }
  }
  .campaign-image                 {
    img                           { width: 100%; }
    ul                            { color: $lightgray2; font-size: 1.3rem; margin-top: 20px; padding: 0; }
  }


  // CUSTOMERS
  .customer-orders-table          {
    ul                            { list-style: none; border-bottom: 1px solid $border; margin: 0; padding: 0; position: relative;
      &:first-child               { border-bottom: 2px solid $black; font: 500 14px $serif-font;
        li                        { line-height: 1; padding-bottom: 5px; }
      }
      > span                      { padding: 5px; position: absolute; left: -20px; font-size: 8px; top: 20px;
        &.icon-triangle_up        { font-size: 6px; }
      }
    }
    li                            { float: left; line-height: 60px; width: calc(100% / 6);
      &:last-child                { text-align: right; }
    }
    .order-details                { background: $selectbg-stop; clear: both; margin: 0; padding: 0 15%; position: relative;
      .icon-close                 { padding: 0; position: absolute; right: 20px; top: 20px; }
      .table                      { margin: 0; padding-top: 20px;
        .tr:last-child .td        { border-bottom: 0; }
        .th                       { padding: 0 0 5px;
          &:nth-child(1)          { width: 45%; }
          &:nth-child(2)          { width: 25%; }
          &:nth-child(3)          { width: 15%; }
          &:nth-child(4)          { width: 15%; }
        }
        .td                       { border-color: $column-picker-bd; }
      }
    }
  }

  // SETTINGS
  .integration-image              { margin-bottom: 40px; max-height: 50px; max-width: 200px; }
}

